2007-12-21  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (i386-gen.o): Also depend on
	$(srcdir)/../include/opcode/i386.h.
	* Makefile.in: Regenerated.

2007-11-29  Mark Shinwell  <shinwell@codesourcery.com>

	* mips-dis.c (mips_arch_choices): Add Loongson-2E and -2F
	entries.
	* mips-opc.c (IL2E): New.
	(IL2F): New.
	(mips_builtin_opcodes): Add Loongson-2E and -2F instructions.
	Allow movz and movn for Loongson-2E and -2F.  Add movnz entry.
	Move coprocessor encodings to the end of the table.  Allow
	certain MIPS V .ps instructions on the Loongson-2E and -2F.

2007-11-29  Mark Shinwell  <shinwell@codesourcery.com>

	* mips-opc.c (I3_32, I3_33, I4_32, I4_33, I5_33): New.
	(mips_builtin_opcodes): Use these new I* values.

2007-11-27  Andreas Krebbel  <krebbel1@de.ibm.com>

	* s390-opc.txt ("tcet", "tcdt", "tcxt", "tget", "tgdt",
	"tgxt"): Removed.
	("tdcet", "tdcdt", "tdcxt", "tdget", "tdgdt", "tdgxt"): Added.

2007-11-14  H.J. Lu  <hongjiu.lu@intel.com>

	* ia64-ic.tbl: Updated for Itanium 9100 series.
	* ia64-raw.tbl: Likewise.
	* ia64-waw.tbl: Likewise.
	* ia64-asmtab.c: Regenerated.

2007-11-14  Tristan Gingold  <gingold@adacore.com>

	* ia64-dis.c (print_insn_ia64): Handle ar.ruc.
	* ia64-gen.c (lookup_regindex): Likewise.

2007-11-07  Jens Arnold  <jens@jens-arnold.net>

	PR gas/5228
	* m68k-opc.c (m68k_opcodes): Fix coldfire msac.w instructions with
	parallel loads.

2007-11-07  Tristan Gingold  <gingold@adacore.com>

	* ia64-dis.c (print_insn_ia64): Generate symbolic names for cr
	registers instead of register number.

2007-11-07  David O'Brien  <obrien@FreeBSD.org>

	* arm-dis.c (arm_opcodes): Remove superflous escapes of percent
	operators.

2007-11-06  Peter Bergner  <bergner@vnet.ibm.com>

	* ppc-opc.c (powerpc_opcodes): Remove the dcffix and dcffix. opcodes
	which are not included in the "Preliminary Decimal Floating-Point
	Architecture" document.

2007-11-01  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-gen.c (opcode_modifiers): Replace No_xSuf with