@@ -1,3 +1,12 @@
+2007-12-22  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-dis.c (intel_mnemonic): New.
+	(print_i386_disassembler_options): Display att-mnemonic and
+	intel-mnemonic options.
+	(print_insn): Handle att-mnemonic and intel-mnemonic.
+	(float_reg): Replace SYSV386_COMPAT with "!M" and "M".
+	(putop): Handle "!M" and "M".
+
 2007-12-21  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* Makefile.am (i386-gen.o): Also depend on
